--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
       <option value="externo">Mercado Externo</option>
     </select>
 
-    <label for="desvio">Desvio (0 a 99):</label>
+    <label for="desvio">Desvio na trena (0 a 99):</label>
     <div class="input-unit">
       <input type="number" id="desvio" min="0" max="99" placeholder="Ex: 10" />
       <span class="unit">mm</span>
